--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@ Reveal.addEventListener( 'customevent', function() {
 					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
 					{ src: 'plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
 					{ src: 'plugin/zoom-js/zoom.js', async: true },
+				    { src: 'plugin/shuffle/shuffle.js', async: true },
 					{ src: 'plugin/notes/notes.js', async: true }
 				]
 			});
