Add three main slides

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css" id="theme">
+		<link rel="stylesheet" href="css/theme/white.css" id="theme">
 
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -38,14 +38,24 @@
 	<body>
 
 		<div class="reveal">
-
 			<div class="slides">
-				<section>
-					<h1>La semaine de 168 heures</h1>
-				</section>
-
+		        <section data-background="./assets/semaine_168_heures.jpg"></section>
+		        <section>
+		        	<section data-background="./assets/cowork_1.jpg"></section>
+		       		<section data-background="./assets/cowork_2.jpg"></section>
+		        </section>
+		       	<section>
+		       		<section data-background="./assets/walkindev_1.jpg"></section>
+		       		<section data-background="./assets/walkindev_2.jpg"></section>
+		       		<section data-background="./assets/walkindev_3.jpg"></section>
+		       		<section data-background="./assets/walkindev_4.jpg"></section>
+		       		<section data-background="./assets/walkindev_5.jpg"></section>
+		       	</section>
+		       	<section>
+		       		<section data-background="./assets/alarm_clock_1.gif"></section>
+		       		<section data-background="./assets/alarm_clock_2.jpg"></section>
+		       	</section>
 			</div>
-
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
