Add walk and easyness slides

--- a/index.html
+++ b/index.html
@@ -50,10 +50,20 @@
 		       		<section data-background="./assets/walkindev_3.jpg"></section>
 		       		<section data-background="./assets/walkindev_4.jpg"></section>
 		       		<section data-background="./assets/walkindev_5.jpg"></section>
+		       		<section data-background="./assets/walkindev_6.jpg"></section>
+		       		<section data-background="./assets/walkindev_7.jpg"></section>
 		       	</section>
 		       	<section>
 		       		<section data-background="./assets/alarm_clock_1.gif"></section>
 		       		<section data-background="./assets/alarm_clock_2.jpg"></section>
+		       	</section>
+		       	<section>
+		       		<section data-background="./assets/walk_1.jpg"></section>
+		       		<section data-background="./assets/walk_2.jpg"></section>
+		       	</section>
+		       	<section>
+		       		<section data-background="./assets/easiness_vs_facility_1.jpg"></section>
+		       		<section data-background="./assets/easiness_vs_facility_2.jpg"></section>
 		       	</section>
 			</div>
 		</div>
