boss customer contender

--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
 		       		<section data-background="./assets/easiness_vs_facility_1.jpg"></section>
 		       		<section data-background="./assets/easiness_vs_facility_2.jpg"></section>
 		       	</section>
+		       	<section>
+		       		<section data-background="./assets/boss_customer_contender_1.jpg"></section>
+		       		<section data-background="./assets/boss_customer_contender_2.jpg"></section>
+		       		<section data-background="./assets/boss_customer_contender_3.jpg"></section>
+		       		<section data-background="./assets/boss_customer_contender_4.jpg"></section>
+		       	</section>
 			</div>
 		</div>
 
