--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
 		       		<section data-background="./assets/boss_customer_contender_2.jpg"></section>
 		       		<section data-background="./assets/boss_customer_contender_3.jpg"></section>
 		       		<section data-background="./assets/boss_customer_contender_4.jpg"></section>
+		       		<section data-background="./assets/boss_customer_contender_5.jpg"></section>
+		       	</section>
+		       	<section>
+		       		<section data-background="./assets/coding_play_bricolage_1.gif"></section>
+		       		<section data-background="./assets/coding_play_bricolage_2.jpg"></section>
+		       		<section data-background="./assets/coding_play_bricolage_3.jpg"></section>
 		       	</section>
 			</div>
 		</div>
