add productivity, bricolage, we need to eat

--- a/index.html
+++ b/index.html
@@ -76,7 +76,17 @@
 		       		<section data-background="./assets/coding_play_bricolage_1.gif"></section>
 		       		<section data-background="./assets/coding_play_bricolage_2.jpg"></section>
 		       		<section data-background="./assets/coding_play_bricolage_3.jpg"></section>
+		       		<section data-background="./assets/coding_play_bricolage_4.jpg"></section>
+		       		<section data-background="./assets/coding_play_bricolage_5.jpg"></section>
 		       	</section>
+		       	<section>
+			       	<section data-background="./assets/productivity_1.jpg"></section>
+			       	<section data-background="./assets/productivity_2.jpg"></section>
+		       	</section>
+		       	<section data-background="./assets/tools.jpg"></section>
+		       	<section data-background="./assets/we_need_to_eat.jpg"></section>
+
+		       	<section data-background="./assets/quinnanya_thanks.jpg"></section>
 			</div>
 		</div>
 
@@ -93,6 +103,10 @@
 				history: true,
 				center: true,
 
+
+				shuffle: {
+					keepLasts: 1
+				},
 				transition: 'slide', // none/fade/slide/convex/concave/zoom
 
 				// Optional reveal.js plugins
