--- a/index.html
+++ b/index.html
@@ -85,8 +85,12 @@
 		       	</section>
 		       	<section data-background="./assets/tools.jpg"></section>
 		       	<section data-background="./assets/we_need_to_eat.jpg"></section>
-
 		       	<section data-background="./assets/quinnanya_thanks.jpg"></section>
+		      	<section>
+		       		<section data-background="./assets/exploration_open_1.jpg"></section>
+		       		<section data-background="./assets/exploration_open_2.jpg"></section>
+		       		<section data-background="./assets/exploration_open_3.jpg"></section>
+		       	</section>
 			</div>
 		</div>
 
