--- a/index.html
+++ b/index.html
@@ -84,13 +84,19 @@
 			       	<section data-background="./assets/productivity_2.jpg"></section>
 		       	</section>
 		       	<section data-background="./assets/tools.jpg"></section>
-		       	<section data-background="./assets/we_need_to_eat.jpg"></section>
-		       	<section data-background="./assets/quinnanya_thanks.jpg"></section>
+
+		       	<section>
+		       		<section data-background="./assets/we_need_to_eat.jpg"></section>
+		       		<section data-background="./assets/degrowth.jpg"></section>
+		       	</section>
+
 		      	<section>
 		       		<section data-background="./assets/exploration_open_1.jpg"></section>
 		       		<section data-background="./assets/exploration_open_2.jpg"></section>
 		       		<section data-background="./assets/exploration_open_3.jpg"></section>
 		       	</section>
+
+		        <section data-background="./assets/quinnanya_thanks.jpg"></section>
 			</div>
 		</div>
 
