--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 		       		<section data-background="./assets/no_word_2.jpg"></section>
 		       	</section>
 
+		       	<section data-background="./assets/be_happy.jpg"></section>
 		        <section data-background="./assets/quinnanya_thanks.jpg"></section>
 			</div>
 		</div>
@@ -119,7 +120,7 @@
 
 
 				shuffle: {
-					keepLasts: 1
+					keepLasts: 2
 				},
 				transition: 'slide', // none/fade/slide/convex/concave/zoom
 
