--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 		       		<section data-background="./assets/rate_exploration_1.jpg"></section>
 		       		<section data-background="./assets/rate_exploration_2.jpg"></section>
 		       		<section data-background="./assets/rate_exploration_3.jpg"></section>
+		       		<section data-background="./assets/rate_exploration_4.jpg"></section>
 		       	</section>
 		       	<section>
 		       		<section data-background="./assets/no_word_1.jpg"></section>
