--- a/index.html
+++ b/index.html
@@ -1,143 +1,290 @@
 <!doctype html>
 <html lang="en">
 
-	<head>
-		<meta charset="utf-8">
+<head>
+  <meta charset="utf-8">
 
-		<title>La semaine de 168 heures</title>
+  <title>La semaine de 168 heures</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Stéphane Langlois">
-		<meta name="author" content="Antoine Vernois">
+  <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+  <meta name="author" content="Stéphane Langlois">
+  <meta name="author" content="Antoine Vernois">
 
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/white.css" id="theme">
+  <link rel="stylesheet" href="css/reveal.css">
+  <link rel="stylesheet" href="css/theme/white.css" id="theme">
 
-		<!-- Code syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+  <!-- Code syntax highlighting -->
+  <link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
+  <!-- Printing and PDF exports -->
+  <script>
+    var link = document.createElement('link');
+    link.rel = 'stylesheet';
+    link.type = 'text/css';
+    link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
+    document.getElementsByTagName('head')[0].appendChild(link);
+  </script>
 
-		<!--[if lt IE 9]>
-		<script src="lib/js/html5shiv.js"></script>
-		<![endif]-->
-	</head>
+  <!--[if lt IE 9]>
+        <script src="lib/js/html5shiv.js"></script>
+        <![endif]-->
+</head>
 
-	<body>
+<body>
+  <div class="reveal">
+    <div class="slides">
+      <section data-background="./assets/semaine_168_heures.jpg">
+        <aside class=notes>
+          <ul>
+            <li>prepared with Stéphane Langlois</li>
+            <li>why:</li>
+            <li>how: we talk about our practices, what are po</li>
+          </ul>
+        </aside>
+      </section>
+      <section>
+        <section data-background="./assets/cowork_1.jpg">
+          <aside class="notes">
+            <ul>
+              <li>this is what we imagined when we thing about co-working space</li>
+              <li> people working and collaboration next to each other</li>
+            </ul>
+          </aside>
+        </section>
+        <section data-background="./assets/cowork_2.jpg">
+          <aside class="notes">
+            <ul>
+              <li>but mmost of the time we see something else</li>
+              <li>people recreating office, working next to each other but not really together</li>
+            </ul>
+          </aside>
+        </section>
+      </section>
+      <section>
+        <section data-background="./assets/walkindev_1.jpg">
+          <aside class=notes>
+            <ul>
+              <li>so you don't have an office?</li>
+              <li>the world is my office</li>
+            </ul>
+          </aside>
+        </section>
+        <section data-background="./assets/walkindev_2.jpg">
+        <aside class=notes>
+            <ul>
+              <li>my office</li>
+              <li></li>
+            </ul>
+          </aside>
+        </section>
+        <section data-background="./assets/walkindev_3.jpg"></section>
+        <section data-background="./assets/walkindev_4.jpg"></section>
+        <section data-background="./assets/walkindev_5.jpg"></section>
+        <section data-background="./assets/walkindev_6.jpg"></section>
+        <section data-background="./assets/walkindev_7.jpg"></section>
+      </section>
+      <section>
+        <section data-background="./assets/alarm_clock_1.gif">
+          <aside class=notes>
+            <ul>
+              <li>no alarm clock.</li>
+              <li>well I have one, but i'm always awake 10 min before.</li>
+              <li>if needed it's a sign</li>
+            </ul>
+          </aside>
+        </section>
+        <section data-background="./assets/alarm_clock_2.jpg">
+          <aside class=notes>
+            <ul>
+              <li>except on goundhog day.</li>
+              <li>train/plane/this conference</li>
+            </ul>
+          </aside>
+        </section>
+      </section>
+      <section>
+        <section data-background="./assets/walk_1.jpg"></section>
+        <section data-background="./assets/walk_2.jpg"></section>
+      </section>
+      <section>
+        <section data-background="./assets/easiness_vs_facility_1.jpg"></section>
+        <section data-background="./assets/easiness_vs_facility_2.jpg"></section>
+      </section>
+      <section>
+        <section data-background="./assets/boss_customer_contender_1.jpg">
+          <aside class=notes>
+            <ul>
+              <li>the triptical: boss / customer / contender</li>
+            </ul>
+          </aside>
+        </section>
+        <section data-background="./assets/boss_customer_contender_2.jpg">
+          <aside class=notes>
+            <ul>
+              <li>I don't want you to be my boss, or someone else.</li>
+              <li></li>
+            </ul>
+          </aside>
+        </section>
+        <section data-background="./assets/boss_customer_contender_3.jpg">
+        <aside class=notes>
+            <ul>
+              <li>I don't want to work for you, I want to work with you.</li>
+            </ul>
+          </aside>
+        </section>
+        <section data-background="./assets/boss_customer_contender_5.jpg">
+          <aside class=notes>
+            <ul>
+              <li>marketing. We are not trying to sell you thing.</li>
+              <li>how do you find/look for clients? We don't. They just come to us.</li>
+            </ul>
+          </aside>
+        </section>
+        <section data-background="./assets/boss_customer_contender_4.jpg"></section>
+      </section>
+      <section>
+        <section data-background="./assets/coding_play_bricolage_1.gif"></section>
+        <section data-background="./assets/coding_play_bricolage_2.jpg"></section>
+        <section data-background="./assets/coding_play_bricolage_3.jpg"></section>
+        <section data-background="./assets/coding_play_bricolage_4.jpg"></section>
+        <section data-background="./assets/coding_play_bricolage_5.jpg"></section>
+      </section>
+      <section>
+        <section data-background="./assets/productivity_1.jpg">
+          <aside class=notes>
+              <ul>
+                <li>productivity: is typing on your keyboard always productivity?</li>
+                <li>I code when I walk, </li>
+                <li>I see too many dev thinking their not productive when they do not type.</li>
+              </ul>
+            </aside>
+          </section>
+        <section data-background="./assets/productivity_2.jpg">
+          <aside class=notes>
+            <ul>
+              <li>lazy people are right</li>
+            </ul>
+          </aside>
+        </section>
+      </section>
+      <section data-background="./assets/tools.jpg">
+        <aside class=notes>
+          <ul>
+            <li>what are your tools to organise?</li>
+            <li>none.</li>
+            <li>a laptop, an internet connection, my headphone and that's pretty much it.</li>
+          </ul>
+        </aside>
+      </section>
 
-		<div class="reveal">
-			<div class="slides">
-		        <section data-background="./assets/semaine_168_heures.jpg"></section>
-		        <section>
-		        	<section data-background="./assets/cowork_1.jpg"></section>
-		       		<section data-background="./assets/cowork_2.jpg"></section>
-		        </section>
-		       	<section>
-		       		<section data-background="./assets/walkindev_1.jpg"></section>
-		       		<section data-background="./assets/walkindev_2.jpg"></section>
-		       		<section data-background="./assets/walkindev_3.jpg"></section>
-		       		<section data-background="./assets/walkindev_4.jpg"></section>
-		       		<section data-background="./assets/walkindev_5.jpg"></section>
-		       		<section data-background="./assets/walkindev_6.jpg"></section>
-		       		<section data-background="./assets/walkindev_7.jpg"></section>
-		       	</section>
-		       	<section>
-		       		<section data-background="./assets/alarm_clock_1.gif"></section>
-		       		<section data-background="./assets/alarm_clock_2.jpg"></section>
-		       	</section>
-		       	<section>
-		       		<section data-background="./assets/walk_1.jpg"></section>
-		       		<section data-background="./assets/walk_2.jpg"></section>
-		       	</section>
-		       	<section>
-		       		<section data-background="./assets/easiness_vs_facility_1.jpg"></section>
-		       		<section data-background="./assets/easiness_vs_facility_2.jpg"></section>
-		       	</section>
-		       	<section>
-		       		<section data-background="./assets/boss_customer_contender_1.jpg"></section>
-		       		<section data-background="./assets/boss_customer_contender_2.jpg"></section>
-		       		<section data-background="./assets/boss_customer_contender_3.jpg"></section>
-		       		<section data-background="./assets/boss_customer_contender_5.jpg"></section>
-		       		<section data-background="./assets/boss_customer_contender_4.jpg"></section>
-		       	</section>
-		       	<section>
-		       		<section data-background="./assets/coding_play_bricolage_1.gif"></section>
-		       		<section data-background="./assets/coding_play_bricolage_2.jpg"></section>
-		       		<section data-background="./assets/coding_play_bricolage_3.jpg"></section>
-		       		<section data-background="./assets/coding_play_bricolage_4.jpg"></section>
-		       		<section data-background="./assets/coding_play_bricolage_5.jpg"></section>
-		       	</section>
-		       	<section>
-			       	<section data-background="./assets/productivity_1.jpg"></section>
-			       	<section data-background="./assets/productivity_2.jpg"></section>
-		       	</section>
-		       	<section data-background="./assets/tools.jpg"></section>
+      <section>
+        <section data-background="./assets/we_need_to_eat.jpg"></section>
+        <section data-background="./assets/degrowth.jpg">
+          <aside class=notes>
+              <ul>
+                <li>when I started I wonder how I would do it with less money?</li>
+                <li>but everything become simpler when you get the money out of the equation.</li>
+              </ul>
+            </aside>
+          </section>
+      </section>
 
-		       	<section>
-		       		<section data-background="./assets/we_need_to_eat.jpg"></section>
-		       		<section data-background="./assets/degrowth.jpg"></section>
-		       	</section>
+      <section>
+        <section data-background="./assets/rate_exploration_1.jpg">
+          <aside class=notes>
+            <ul>
+              <li>Stéphane : how much people are ok to pay ?</li>
+              <li>Antoine: how much do I need to ask?</li>
+              <li>it's not negotiable</li>
+            </ul>
+          </aside>
+        </section>
+        <section data-background="./assets/rate_exploration_2.jpg">
+          <aside class=notes>
+            <ul>
+              <li>sometimes we are not good.</li>
+              <li>we take the right to not invoice our time of incompetence</li>
+            </ul>
+          </aside>
+        </section>
+        <section data-background="./assets/rate_exploration_3.jpg">
+          <aside class=notes>
+            <ul>
+              <li>exploration: we take a lot of time to explore (and worth what we charge)</li>
+            </ul>
+          </aside>
+        </section>
+        <section data-background="./assets/rate_exploration_4.jpg">
+          <aside class=notes>
+            <ul>
+              <li>open source</li>
+            </ul>
+          </aside>
+        </section>
+      </section>
+      <section>
+        <section data-background="./assets/no_word_1.jpg">
+          <aside class=notes>
+            <ul>
+              <li>white square on white background - Malevitch</li>
+              <li>what do we do?</li>
+              <li>lost few hours to find and answer</li>
+              <li>used to be a painfull, now it's random</li>
+            </ul>
+          </aside>
+        </section>
+        <section data-background="./assets/no_word_2.jpg">
+          <aside class=notes>
+            <ul>
+              <li>bullshit bingo</li>
+              <li></li>
+            </ul>
+          </aside>
+        </section>
+      </section>
 
-		      	<section>
-		       		<section data-background="./assets/rate_exploration_1.jpg"></section>
-		       		<section data-background="./assets/rate_exploration_2.jpg"></section>
-		       		<section data-background="./assets/rate_exploration_3.jpg"></section>
-		       		<section data-background="./assets/rate_exploration_4.jpg"></section>
-		       	</section>
-		       	<section>
-		       		<section data-background="./assets/no_word_1.jpg"></section>
-		       		<section data-background="./assets/no_word_2.jpg"></section>
-		       	</section>
+      <section data-background="./assets/be_happy.jpg"></section>
+      <section data-background="./assets/quinnanya_thanks.jpg"></section>
+    </div>
+  </div>
 
-		       	<section data-background="./assets/be_happy.jpg"></section>
-		        <section data-background="./assets/quinnanya_thanks.jpg"></section>
-			</div>
-		</div>
+  <script src="lib/js/head.min.js"></script>
+  <script src="js/reveal.js"></script>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
-
-		<script>
-
-			// Full list of configuration options available at:
-			// https://github.com/hakimel/reveal.js#configuration
-			Reveal.initialize({
-				controls: true,
-				progress: true,
-				history: true,
-				center: true,
+  <script>
+    // Full list of configuration options available at:
+    // https://github.com/hakimel/reveal.js#configuration
+    Reveal.initialize({
+      controls: true,
+      progress: true,
+      history: true,
+      center: true,
 
 
-				shuffle: {
-					keepLasts: 2
-				},
-				transition: 'slide', // none/fade/slide/convex/concave/zoom
+      shuffle: {
+        keepLasts: 2
+      },
+      transition: 'slide', // none/fade/slide/convex/concave/zoom
 
-				// Optional reveal.js plugins
-				dependencies: [
-					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'plugin/zoom-js/zoom.js', async: true },
-				    { src: 'plugin/shuffle/shuffle.js', async: true },
-					{ src: 'plugin/notes/notes.js', async: true }
-				]
-			});
+      // Optional reveal.js plugins
+      dependencies: [
+        { src: 'lib/js/classList.js', condition: function () { return !document.body.classList; } },
+        { src: 'plugin/markdown/marked.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
+        { src: 'plugin/markdown/markdown.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
+        { src: 'plugin/highlight/highlight.js', async: true, condition: function () { return !!document.querySelector('pre code'); }, callback: function () { hljs.initHighlightingOnLoad(); } },
+        { src: 'plugin/zoom-js/zoom.js', async: true },
+        { src: 'plugin/shuffle/shuffle.js', async: true },
+        { src: 'plugin/notes/notes.js', async: true }
+      ]
+    });
+  </script>
 
-		</script>
+</body>
 
-	</body>
 </html>
