add a section about phone

--- a/index.html
+++ b/index.html
@@ -248,7 +248,17 @@
           </aside>
         </section>
       </section>
-
+      <section>
+        <section data-background="./assets/phone.jpg">
+          <aside class=notes>
+            <ul>
+              <li></li>
+              <li><a href="https://www.flickr.com/photos/141735806@N08/34269304730/">phone by Hamza Butt</a></li>
+            </ul>
+          </aside>
+        </section>
+        <section data-background="./assets/notification.png"></section>
+      </section>
       <section data-background="./assets/be_happy.jpg"></section>
       <section data-background="./assets/quinnanya_thanks.jpg"></section>
     </div>
