use english understandable references

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
   <div class="reveal">
     <div class="slides">
-      <section data-background="./assets/semaine_168_heures.jpg">
+      <section data-background="./assets/168_hour_workweek.jpg">
         <aside class=notes>
           <ul>
             <li>prepared with Stéphane Langlois</li>
@@ -235,15 +235,17 @@
               <li>white square on white background - Malevitch</li>
               <li>what do we do?</li>
               <li>lost few hours to find and answer</li>
-              <li>used to be a painfull, now it's random</li>
+              <li>we came with lot of things, but none very satisfying</li>
             </ul>
           </aside>
         </section>
-        <section data-background="./assets/no_word_2.jpg">
+        <section data-background="./assets/bullshit-bingo.png">
           <aside class=notes>
             <ul>
               <li>bullshit bingo</li>
-              <li></li>
+              <li>used to be a painfull, now it's random</li>
+              
+              <li>bullshitbingo.net</li>
             </ul>
           </aside>
         </section>
