--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         <aside class=notes>
           <ul>
             <li>prepared with Stéphane Langlois</li>
-            <li>why:</li>
+            <li> about what happen when we broke the wall between life and work. </li>
+            <li>why: happiness at work ? Chief happyness at work</li>
+            <li>what about the rest of the time?</li>
             <li>how: we talk about our practices, what are po</li>
           </ul>
         </aside>
@@ -86,7 +88,8 @@
         <section data-background="./assets/walkindev_4.jpg"></section>
         <section data-background="./assets/walkindev_5.jpg"></section>
         <section data-background="./assets/walkindev_6.jpg"></section>
-        <section data-background="./assets/walkindev_7.jpg"></section>
+        <section data-background="./assets/walkingdev_9.jpg"></section>
+        <section data-background="./assets/walkingdev_8.jpg"></section>
       </section>
       <section>
         <section data-background="./assets/alarm_clock_1.gif">
@@ -108,11 +111,34 @@
         </section>
       </section>
       <section>
-        <section data-background="./assets/walk_1.jpg"></section>
-        <section data-background="./assets/walk_2.jpg"></section>
+        <section data-background="./assets/walk_1.jpg">
+          <aside class=notes>
+            <ul>
+              <li>no car, most of the time no public transport</li>
+              <li>stephane use to use tis time for phone calls, but not anymre</li>
+              <li>I find it a very efficient way to think, a create (brain used for the walk)</li>
+            </ul>
+          </aside>
+        </section>
+        <section data-background="./assets/walk_2.jpg">
+          <aside class=notes>
+            <ul>
+              <li>you can walk too :)</li>
+              <li>meeting are boring? walk</li>
+              <li>need to take a break? walk</li>
+          </ul>
+          </aside>
+        </section>
       </section>
       <section>
-        <section data-background="./assets/easiness_vs_facility_1.jpg"></section>
+        <section data-background="./assets/easiness_vs_facility_1.jpg">
+          <aside class=notes>
+            <ul>
+              <li>go in production on friday</li>
+              <li>(in)comfort zone</li>
+            </ul>
+          </aside>
+        </section>
         <section data-background="./assets/easiness_vs_facility_2.jpg"></section>
       </section>
       <section>
@@ -196,7 +222,7 @@
       </section>
 
       <section>
-        <section data-background="./assets/rate_exploration_1.jpg">
+        <section data-background="./assets/the_price_is_right.jpg">
           <aside class=notes>
             <ul>
               <li>Stéphane : how much people are ok to pay ?</li>
@@ -291,7 +317,7 @@
         { src: 'plugin/markdown/markdown.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
         { src: 'plugin/highlight/highlight.js', async: true, condition: function () { return !!document.querySelector('pre code'); }, callback: function () { hljs.initHighlightingOnLoad(); } },
         { src: 'plugin/zoom-js/zoom.js', async: true },
-        { src: 'plugin/shuffle/shuffle.js', async: true },
+//        { src: 'plugin/shuffle/shuffle.js', async: true },
         { src: 'plugin/notes/notes.js', async: true }
       ]
     });
