remove some content to fit in the timebox :)

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             </ul>
           </aside>
         </section>
-      </section>
-      <section>
+      <!--/section>
+      <section-->
         <section data-background="./assets/walkindev_1.jpg">
           <aside class=notes>
             <ul>
@@ -164,22 +164,22 @@
             </ul>
           </aside>
         </section>
-        <section data-background="./assets/boss_customer_contender_5.jpg">
+        <!--section data-background="./assets/boss_customer_contender_5.jpg">
           <aside class=notes>
             <ul>
               <li>marketing. We are not trying to sell you thing.</li>
               <li>how do you find/look for clients? We don't. They just come to us.</li>
             </ul>
           </aside>
-        </section>
+        </section-->
         <section data-background="./assets/boss_customer_contender_4.jpg"></section>
       </section>
       <section>
         <section data-background="./assets/coding_play_bricolage_1.gif"></section>
         <section data-background="./assets/coding_play_bricolage_2.jpg"></section>
         <section data-background="./assets/coding_play_bricolage_3.jpg"></section>
-        <section data-background="./assets/coding_play_bricolage_4.jpg"></section>
-        <section data-background="./assets/coding_play_bricolage_5.jpg"></section>
+        <!--section data-background="./assets/coding_play_bricolage_4.jpg"></section-->
+        <!--section data-background="./assets/coding_play_bricolage_5.jpg"></section-->
       </section>
       <section>
         <section data-background="./assets/productivity_1.jpg">
@@ -199,7 +199,7 @@
           </aside>
         </section>
       </section>
-      <section data-background="./assets/tools.jpg">
+      <!--section data-background="./assets/tools.jpg">
         <aside class=notes>
           <ul>
             <li>what are your tools to organise?</li>
@@ -207,8 +207,9 @@
             <li>a laptop, an internet connection, my headphone and that's pretty much it.</li>
           </ul>
         </aside>
-      </section>
+      </section-->
 
+      
       <section>
         <section data-background="./assets/we_need_to_eat.jpg"></section>
         <section data-background="./assets/degrowth.jpg">
@@ -246,13 +247,13 @@
             </ul>
           </aside>
         </section>
-        <section data-background="./assets/rate_exploration_4.jpg">
+        <!--section data-background="./assets/rate_exploration_4.jpg">
           <aside class=notes>
             <ul>
               <li>open source</li>
             </ul>
           </aside>
-        </section>
+        </section-->
       </section>
       <section>
         <section data-background="./assets/no_word_1.jpg">
@@ -317,7 +318,7 @@
         { src: 'plugin/markdown/markdown.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
         { src: 'plugin/highlight/highlight.js', async: true, condition: function () { return !!document.querySelector('pre code'); }, callback: function () { hljs.initHighlightingOnLoad(); } },
         { src: 'plugin/zoom-js/zoom.js', async: true },
-//        { src: 'plugin/shuffle/shuffle.js', async: true },
+        { src: 'plugin/shuffle/shuffle.js', async: true },
         { src: 'plugin/notes/notes.js', async: true }
       ]
     });
