--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <li> about what happen when we broke the wall between life and work. </li>
             <li>why: happiness at work ? Chief happyness at work</li>
             <li>what about the rest of the time?</li>
-            <li>how: we talk about our practices, what are po</li>
+            <li>last year I billed around 45 days</li>
+            <li>how: we talk about our practices, our way to choose what we do.</li>
           </ul>
         </aside>
       </section>
