--- a/index.html
+++ b/index.html
@@ -86,32 +86,52 @@
           <aside class=notes>
             <ul>
               <li>no car</li>
-              <li>public transportation</li>
-              <li>I find it a very efficient way to think, a create (brain used for the walk)</li>
+              <li>walk and work (with others)</li>
+              <li>walking meeting</li>
             </ul>
           </aside>
         </section>
         <section data-background="./assets/walk_2.jpg"></section>
-          <aside class=notes>
-            <ul>
-              <li>walk and work (with others)</li>
+        <aside class=notes>
+          <ul>
+            <li>public transportation</li>
+            <li>I find it a very efficient way to think, and create (brain used for the walk)</li>
           </ul>
           </aside>
         </section>
       
       </section>
       <section>
-          <section data-background="./assets/tools.jpg"></section>
+          <section data-background="./assets/tools.jpg">
+            <aside class=notes>
+                <ul>
+                  <li></li>
+                </ul>
+              </aside>
+          </section>
           <section data-background="./assets/phone.jpg">
             <aside class=notes>
               <ul>
-                <li></li>
+                <li>(a)synchronous communication when it matters</li>
                 <li><a href="https://www.flickr.com/photos/141735806@N08/34269304730/">phone by Hamza Butt</a></li>
               </ul>
             </aside>
           </section>
-          <section data-background="./assets/notification.png"></section>
-          <section data-background="./assets/tools_3.jpg"></section>
+          <section data-background="./assets/notification.png">
+            <aside class=notes>
+                <ul>
+                  <li>very few notification</li>
+                </ul>
+              </aside></section>
+          <section data-background="./assets/tools_3.jpg">
+            <aside class=notes>
+                <ul>
+                  <li>gitlab/hub</li>
+                  <li>chat</li>
+                  <li>visio</li>
+                </ul>
+              </aside>
+          </section>
       </section>
       
       <section>
